--- a/wallet-tracker/angular.json
+++ b/wallet-tracker/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/Users/abrormukhammadiev/Desktop/IT/wallet-tracker/wallet-tracker",
             "outputPath": "dist/wallet-tracker",
             "index": "src/index.html",
             "main": "src/main.ts",
