removed Chosen JQuery plugin

--- a/angular.json
+++ b/angular.json
@@ -22,12 +22,10 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "node_modules/chosen-js/chosen.css",
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/chosen-js/chosen.jquery.js"
+              "node_modules/jquery/dist/jquery.js"
             ]
           },
           "configurations": {
@@ -84,12 +82,10 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "node_modules/chosen-js/chosen.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/chosen-js/chosen.jquery.js"
             ]
           }
         }
