--- a/angular.json
+++ b/angular.json
@@ -85,7 +85,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.js",
+              "node_modules/jquery/dist/jquery.js"
             ]
           }
         }
