--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@mobiscroll/angular-lite": "^4.10.9",
     "firebase": "^9.22.2",
     "jquery": "^3.6.0",
     "rxjs": "~7.8.0",
