removed mobiscroll plugin

--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "src/styles.css",
-              "./node_modules/@mobiscroll/angular-lite/dist/css/mobiscroll.min.css"
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js"
