--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.1.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "firebase": "^9.22.2",
+    "firebase": "^9.23.0",
     "jquery": "^3.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
