--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
+            "styles": [{
+              "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+            },
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "src/styles.css"
